# Graphics-Computing

./: .gitignore  README.md
Lab_1/project/: arbol.py  chacra.py  nube.py
Lab_2/project/: MultiCollision.py
Opengl_Practice/ejercicios/src/01_hello_glew/: CMakeLists.txt  main.cpp
examen/: examen.html
house_threejs/: index.html
lab_6/: pregunta1_2.html
opengl/: compile.sh
opengl/build_linux/: CMakeCache.txt
opengl/build_linux/src/: cmake_install.cmake
opengl/src/01_hello_glew/: main.cpp
opengl/src/03_catch_errors/: main.cpp
opengl/src/04_shader_file/: fragShader.glsl  main.cpp
opengl/src/101_hello_glad/: CMakeLists.txt
opengl/src/103_square/: CMakeLists.txt
opengl/src/103_triangle/: CMakeLists.txt
opengl/src/104_shaders/: main.cpp
opengl/src/105_shaders/: CMakeLists.txt  main.cpp
opengl/src/106_shaders/: CMakeLists.txt  main.cpp
opengl/src/107_textures/: CMakeLists.txt  main.cpp  shader.h
opengl/src/hw0/: CMakeLists.txt  main.cpp
opengl/src/hw1/: main.cpp
parcial_1/Lab_1/project/: chacra.py
parcial_1/lab_6/: pregunta1_2.html  pregunta1_2v.html
parcial_1/planetas/: c.js  index.html
parcial_2/: apuntes1  apuntes2
parcial_2/OpenglVSCode/ejercicios/: test.cpp
parcial_2/Opengl_Practice/traducidos/: Notas complementarias  detexxion de errore y leer codigo fuente desde archivos  fragment shader  segundo_programa_1_parte
parcial_2/examen/: Fluid_Simulation.html  apuntes.txt
parcial_2/examen/Fluids2D/: Navier_Stokes_Equations2D.js  index.html  sketch.js
parcial_2/examen/Fluids3D/: Navier_Stokes_Equations.js  Navier_Stokes_Equations_2.js
parcial_2/examen/models/: Set of Fire.fbx
parcial_2/lab_10/: test.py  test2.py
parcial_2/lab_10/Constrast_stretching/: Contrast_stretching.py  Contrast_stretching_library.py  Contrast_stretching_outliers.py  apuntes.txt
parcial_2/lab_10/Exponential_Operator/: exponentialOperator.py
parcial_2/lab_10/Histograma_Equalization/: histogramaEqua.py
parcial_2/lab_10/Logarithm_Operator/: LogarithmOperator.py  rootOperator.py
parcial_2/lab_10/Raise_to_the_power_Operator/: raise_to_the_power_Operator.py
parcial_2/lab_10/Thresholding/: Thresholding1.py  Thresholding2.py  Thresholding3.py
parcial_2/lab_9/: Buffer_vertex_attribute_uniform_variables.txt  Gestion de graficos 3D.txt  System_Solar.txt  interpolacion.txt  primer_progama_3D.txt  primer_progama_3D_parte2.txt  render_multiples.txt
parcial_2/lab_9/buildCube/: Program4_1_Plai_Red_Cube.h  Program4_2_instanciando.h  Program4_3_Cube_and_Pyramid.h  Render_multiple_objects.h  Simple_Solar_System.h  buildCube.vcxproj  buildCube.vcxproj.filters  main.cpp
parcial_2/opengl/build_linux/: Makefile  cmake_install.cmake
parcial_2/opengl/src/: CMakeLists.txt
parcial_2/opengl/src/01_hello_glew/: CMakeLists.txt
parcial_2/opengl/src/02_shader_point/: CMakeLists.txt  main.cpp
parcial_2/opengl/src/03_catch_errors/: CMakeLists.txt
parcial_2/opengl/src/04_shader_file/: CMakeLists.txt  vertShader.glsl
parcial_2/opengl/src/101_hello_glad/: main.cpp
parcial_2/opengl/src/103_square/: main.cpp
parcial_2/opengl/src/103_triangle/: main.cpp
parcial_2/opengl/src/104_shaders/: CMakeLists.txt
parcial_2/opengl/src/106_shaders/: shader_vs.c
parcial_2/opengl/src/108_textures/: CMakeLists.txt  main.cpp
parcial_2/opengl/src/Projection_NatteRobbins_CPP/: CMakeLists.txt  projection.cpp
parcial_2/opengl/src/hw0/: geometry3.h
parcial_2/opengl/src/hw1/: CMakeLists.txt
parcial_2/opengl/src/tutorial_01/: CMakeLists.txt
parcial_3/lab_10/Affine_transformation/: ajustes.txt
parcial_3/lab_10/Constrast_stretching/: test.py
parcial_3/lab_10/Exp_Log_Raise_Operator/: Ex_Lo_Ra_Operador.py
parcial_3/lab_10/Exponential_Operator/: exponentialOperator.py
parcial_3/lab_10/Histograma_Equalization/: histogramEqualizationLibrary.py  histogramaEqua.py  histogramaEqua2.py
parcial_3/lab_10/Logarithm_Operator/: LogarithmOperator.py  rootOperator.py
planetas/: index.html  planetas.js  planets.js  solarSistem.js
planetas/textures/: deimosMars.jfif
(+227 files in other folders)
