#add_subdirectory( tutorial_01 )
#add_subdirectory( 01_hello_glad )
add_subdirectory( 01_hello_glew )
#add_subdirectory( 02_shader_point ) //comentado
#add_subdirectory( 03_catch_errors ) //comentado
#add_subdirectory( 04_shader_file ) //comentado
#add_subdirectory( 02_triangle )
#add_subdirectory( 03_square )
#add_subdirectory( 04_shaders )
#add_subdirectory( 05_shaders )
#add_subdirectory( 06_shaders )
#add_subdirectory( 07_textures )
#add_subdirectory( 08_textures )

#add_subdirectory( hw0 )
#add_subdirectory( hw1 )
#add_subdirectory( TrabajoCirculo )

#add_subdirectory( Estrella_Animada )

#add_subdirectory( Projection_NatteRobbins )
#add_subdirectory( Projection_NatteRobbins_CPP )
